# embclox

./: CMakeLists.txt  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/skills/embclox-examples/: SKILL.md
.github/workflows/: ci.yml
_examples_embassy/: Cargo.toml  Makefile  test.sh
_examples_embassy/src/: dma_alloc.rs  e1000_adapter.rs  heap.rs  kernfn.rs  main.rs  mmio.rs  mmio_regs.rs  pci_init.rs  serial.rs
crates/e1000/: Cargo.toml
crates/e1000/src/: desc.rs  device.rs
crates/embclox-core/: README.md
crates/embclox-core/src/: dma_alloc.rs
crates/embclox-dma/: README.md
crates/embclox-hal-x86/: Cargo.toml  README.md
crates/embclox-hal-x86/src/: heap.rs  lib.rs  memory.rs  (+4 more)
crates/embclox-hyperv/: Cargo.toml
crates/hal-x86/: Cargo.toml
docs/background/: moss-kernel.md  redox-drivers.md  redox-io-model.md  rust-kernel-survey.md  theseus-kernel.md
docs/design/: async-boot-init.md  cloud-and-virtio.md  driver-model.md  e1000-driver-refactor.md  e1000-embassy-example.md  gap-analysis.md  hal-x86.md  hyperv-gen1.md  hyperv-netvsc.md  test-framework.md  vmbus.md
docs/dev/: HyperV-Testing.md
examples-e1000/: CMakeLists.txt  Cargo.toml  README.md  limine.conf
examples-e1000/.cargo/: config.toml
examples-e1000/src/: main.rs
examples-hyperv/: CMakeLists.txt  Cargo.toml  limine-azure.conf
examples-hyperv/src/: main.rs
examples-tulip/: CMakeLists.txt
examples-tulip/src/: main.rs  time.rs
qemu-tests/unit/: Cargo.toml  limine.conf
scripts/: hyperv-boot-test.ps1  hyperv-tulip-test.ps1  mkvhd.sh  qemu-test.sh
tests/infra/: README.md  main.bicep  storage.bicep  vm.bicep
(+27 files in other folders)
