[package]
name = "embclox-hyperv-example"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5"
embclox-hal-x86.workspace = true
embclox-hyperv.workspace = true
embclox-dma.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-net-driver.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-time-driver.workspace = true
embedded-io-async.workspace = true
critical-section = "1"
heapless = "0.9"
static_cell.workspace = true
x86_64.workspace = true
log.workspace = true
